--- a/Drugi/Navigacija.html
+++ b/Drugi/Navigacija.html
@@ -10,14 +10,16 @@
    </head>
    <body>
       <h1>Deutsch lernen!</h1>
-      <nav>
-         <ol>
-            <li><a href="Pocetna.html">Početna</a></li>
-            <li><a href="Lekcije.html">Lekcije</a></li>
-            <li><a href="Vezbanja.html">Vežbanja</a></li>
-            <li><a href="Testovi.html">Testovi</a></li>
-         </ol>
-      </nav>
+      <div>
+         <nav>
+            <ol>
+               <li><a href="Pocetna.html">Početna</a></li>
+               <li><a href="Lekcije.html">Lekcije</a></li>
+               <li><a href="Vezbanja.html">Vežbanja</a></li>
+               <li><a href="Testovi.html">Testovi</a></li>
+            </ol>
+         </nav>
+      <div>   
       <article>
          <h2>Drachenzeit</h2>
          <p>In der Luft sind sie unterwegs,<br> aber auch in Sagen, Legenden,<br> der Bibel und in Phantasiegeschichten.<br> Auch in manchem Haus finden sie<br> sich in der einen oder anderen<br> Form: Drachen.</p>             
